Putain désolé pour la typo dans le nom

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -52,7 +52,7 @@
 % Titlepage
 \title{CTF SeCReTS}
 \subtitle{Présentation}
-\author{Alexis Brouste -- Loïc Matin -- Alizée Murat}
+\author{Alexis Brouste -- Loïc Martin -- Alizée Murat}
 \date{\today{}}
 \institute[UVSQ]{UVSQ}
 
