--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -113,11 +113,9 @@
 	\end{block}
 
 	\begin{block}<2->{\textit{indice.txt}}
-		\begin{itshape}	
-			\begin{small}
-			Pas d'indice.txt, le flag est le mot de passe de l'executable.
-			\end{small}
-		\end{itshape}
+		\begin{small}
+			Pas d'\textit{indice.txt}, le flag est le mot de passe de l'exécutable.
+		\end{small}
 	\end{block}
 \end{frame}
 
@@ -130,7 +128,7 @@
 			\item Syntaxe du programme
 		\end{itemize}
 		
-		\item Analyse statique de l'executable
+		\item Analyse statique de l'exécutable
 		
 		\begin{itemize}
 			\item Analyse main
@@ -144,7 +142,7 @@
 \subsection{Analyse préliminaire}
 \subsubsection{Type de fichier}
 \begin{frame}[fragile]{Type de fichier}
-	\begin{block}{commande file}
+	\begin{block}{Commande \textit{file}}
 		\vspace{-3mm}
 		\begin{lstlisting}[style=Term]
 			~# file encoreunflag
@@ -165,7 +163,7 @@
 
 \subsubsection{Syntaxe du programme}
 \begin{frame}[fragile]{Syntaxe du programme}
-	\begin{block}{Execution sans argument}
+	\begin{block}{Exécution sans argument}
 		\vspace{-3mm}
 		\begin{lstlisting}[style=Term]
 			~# ./encoreunflag
@@ -236,20 +234,20 @@
 
 	\begin{exampleblock}{}
 		\begin{itemize}
-			\item appel à la fonction \_strlen avec comme argument [ebp+var\_C] qui correspond à notre input
-			\item comparaison de eax (qui a pour valeur le retour du call \_strlen ie la longueur de notre input) à la valeur hexadecimal 14 (20 en décimal)
+			\item appel à la fonction \texttt{\_strlen} avec comme argument [ebp+var\_C] qui correspond à notre input
+			\item comparaison de eax (qui a pour valeur le retour du call \texttt{\_strlen}, i.e. la longueur de notre input) à la valeur hexadecimal 14 (20 en décimal)
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
 
 \begin{frame}[fragile]{Taille du flag}
-	\begin{block}{Information récupéré}
+	\begin{block}{Information récupérée}
 		Le flag est composé de 20 caractères.
 	\end{block}
 
 	\begin{exampleblock}{}
 		\begin{itemize}
-			\item Si notre input n'est pas composé de 20 caractères -> appel à la fonction perdu
+			\item Si notre input n'est pas composé de 20 caractères $ \rightarrow $ appel à la fonction perdu
 		\end{itemize}
 	\end{exampleblock}
 \end{frame}
@@ -260,13 +258,13 @@
 	\end{center}
 
 	\begin{block}{}
-		perdu affiche "Vous avez perdu!"
+		\texttt{perdu} affiche "Vous avez perdu!"
 	\end{block}
 \end{frame}
 		
-\begin{frame}[fragile]{Vérification caratère par caractère}
+\begin{frame}[fragile]{Vérification caractère par caractère}
 	\begin{block}{}
-		20 blocks d'instructions de cette forme:    
+		20 blocs d'instructions de cette forme:    
  		
  		\begin{center}
 			\includegraphics[height=0.2\linewidth]{114/cmpcara.png}
@@ -276,24 +274,24 @@
 	\begin{block}{}
 		\begin{itemize}
 			\item On met dans eax un pointeur vers la valeur de notre input.
-			\item On incrémente eax de i (correspond à décaler le pointeur sur le caractère à la i ème position (ici 1).
-			\item On compare ce caractère à une valeur hexadécimal (ici 46).
+			\item On incrémente eax de i, correspond à décaler le pointeur sur le caractère à la i ème position (ici 1).
+			\item On compare ce caractère à une valeur hexadécimale (ici 46).
 		\end{itemize}
 	\end{block}
 
 	\begin{block}{}
-		Si les caractères sont identiques ont passe au block suivant, sinon appel à perdu
+		Si les caractères sont identiques ont passe au bloc suivant, sinon appel à \texttt{perdu}
 	\end{block}
 \end{frame}
 		
 \begin{frame}[fragile]{Reconstitution du flag}
 	\begin{block}{Attention :}
-		La vérification des caractères n'est pas faite dans l'odre (bien regarder la position du caractère vérifié dans le block).
+		La vérification des caractères n'est pas faite dans l'ordre (bien regarder la position du caractère vérifié dans le bloc).
 	\end{block}
 
 	\begin{exampleblock}{}
 		\begin{itemize}
-			\item On obtient le flag en hexadécimale: \textbf{43 46 41 54 4c 59 6f 6a 74 72 48 75 4d 52 5a 49 4a 6b 71 78}
+			\item On obtient le flag en hexadécimal: \textbf{43 46 41 54 4c 59 6f 6a 74 72 48 75 4d 52 5a 49 4a 6b 71 78}
 			\item En ASCII: \textbf{CFATLYojtrHuMRZIJkqx}
 		\end{itemize}
 	\end{exampleblock}
