ajout de la partie 120

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -122,14 +122,14 @@
 \begin{frame}{Procédure}
 	\begin{itemize}
 		\item Analyse préliminaire du fichier
-		
+
 		\begin{itemize}
 			\item Type de fichier
 			\item Syntaxe du programme
 		\end{itemize}
-		
+
 		\item Analyse statique de l'exécutable
-		
+
 		\begin{itemize}
 			\item Analyse main
 			\item Taille de flag
@@ -153,7 +153,7 @@
 	\begin{block}{}
 		\vspace{-3mm}
 		\begin{lstlisting}[style=Term]
-			encoreunflag: ELF 32-bit LSB executable, Intel 80386, version 1 (SYSV), 
+			encoreunflag: ELF 32-bit LSB executable, Intel 80386, version 1 (SYSV),
 			dynamically linked, interpreter /lib/ld-linux.so.2, for GNU/Linux 2.6.32,
 			BuildID[sha1]=bd05ff0f9ab4efc17d569ac16c3d34f50e389882, not stripped
 		\end{lstlisting}
@@ -261,11 +261,11 @@
 		\texttt{perdu} affiche "Vous avez perdu!"
 	\end{block}
 \end{frame}
-		
+
 \begin{frame}[fragile]{Vérification caractère par caractère}
 	\begin{block}{}
-		20 blocs d'instructions de cette forme:    
- 		
+		20 blocs d'instructions de cette forme:
+
  		\begin{center}
 			\includegraphics[height=0.2\linewidth]{114/cmpcara.png}
 		\end{center}
@@ -283,7 +283,7 @@
 		Si les caractères sont identiques ont passe au bloc suivant, sinon appel à \texttt{perdu}
 	\end{block}
 \end{frame}
-		
+
 \begin{frame}[fragile]{Reconstitution du flag}
 	\begin{block}{Attention :}
 		La vérification des caractères n'est pas faite dans l'ordre (bien regarder la position du caractère vérifié dans le bloc).
@@ -337,9 +337,9 @@
 	\end{block}
 
 	\begin{block}<2->{\textit{indice.txt}}
-		\begin{itshape}	
+		\begin{itshape}
 			\begin{small}
-				In the ennemy base, there is a building, which is guarded by hundreds of 
+				In the ennemy base, there is a building, which is guarded by hundreds of
 				highly trained soldiers.
 
 				In this building, there is a {\color<3->{Dandelion}WPA-PSK} protected wifi with an unbreakable
@@ -353,8 +353,8 @@
 
 				Good luck!
 
-				PS: By the way, a geek visitor just told me he was walking around 
-				the base with his linux laptop (of course, his wlan interface was 
+				PS: By the way, a geek visitor just told me he was walking around
+				the base with his linux laptop (of course, his wlan interface was
 				in  monitor-mode by default). Anyways, he gave me this capture:
 				{\color<3->{OliveGreen}psk-01.cap}
 			\end{small}
@@ -479,22 +479,22 @@
 	\begin{block}{Cassage en cours}<2->
 		\vspace{-3mm}
 		\begin{lstlisting}[style=Term]
-			                          Aircrack-ng 1.5.2 
+			                          Aircrack-ng 1.5.2
 
-		      [00:00:00] 3852/60999 keys tested (5333.67 k/s) 
+		      [00:00:00] 3852/60999 keys tested (5333.67 k/s)
 
 		      Time left: 10 seconds                                      6.31%
 
-		                       Current passphrase: ASSESSMENT91               
+		                       Current passphrase: ASSESSMENT91
 
 
-		      Master Key     : 66 A8 42 94 79 45 03 6F C9 A1 11 33 AA 52 55 D0 
-		                       3E 26 2F 55 43 A4 EC 36 E3 13 3C D6 17 B0 96 AC 
+		      Master Key     : 66 A8 42 94 79 45 03 6F C9 A1 11 33 AA 52 55 D0
+		                       3E 26 2F 55 43 A4 EC 36 E3 13 3C D6 17 B0 96 AC
 
-		      Transient Key  : CE CF A3 E6 2F 92 8C 5E 94 10 3F 8E 10 F9 FC 92 
-		                       25 D3 FE F2 7F D1 4F 27 C1 51 71 8D F5 75 17 5C 
-		                       08 F4 5C 2C C8 42 F1 BD 20 3B D7 79 03 2F 05 90 
-		                       16 E1 E9 92 BB 73 6A 93 6E F8 7A 80 2F 51 81 9E 
+		      Transient Key  : CE CF A3 E6 2F 92 8C 5E 94 10 3F 8E 10 F9 FC 92
+		                       25 D3 FE F2 7F D1 4F 27 C1 51 71 8D F5 75 17 5C
+		                       08 F4 5C 2C C8 42 F1 BD 20 3B D7 79 03 2F 05 90
+		                       16 E1 E9 92 BB 73 6A 93 6E F8 7A 80 2F 51 81 9E
 
 		      EAPOL HMAC     : FC 99 11 B1 45 5C E1 B6 74 E5 2D CB A5 88 21 E1
 		\end{lstlisting}
@@ -507,22 +507,22 @@
 	\begin{block}{Succès}
 		\vspace{-3mm}
 		\begin{lstlisting}[style=Term]
-		                              Aircrack-ng 1.5.2 
+		                              Aircrack-ng 1.5.2
 
-		      [00:00:11] 60926/60999 keys tested (5250.19 k/s) 
+		      [00:00:11] 60926/60999 keys tested (5250.19 k/s)
 
 		      Time left: 0 seconds                                      99.88%
 
 		                         KEY FOUND! [ PROTECTION78 ]
 
 
-		      Master Key     : 58 55 68 7D CA B8 C1 48 9E 85 0C E6 AD EB C2 74 
-		                       4B 58 6E D5 42 56 BD CF 60 36 F4 3D 2E 13 14 BA 
+		      Master Key     : 58 55 68 7D CA B8 C1 48 9E 85 0C E6 AD EB C2 74
+		                       4B 58 6E D5 42 56 BD CF 60 36 F4 3D 2E 13 14 BA
 
-		      Transient Key  : FF 4D 05 EF 35 C9 91 08 27 C0 CE 25 C2 A0 9D 39 
-		                       23 46 41 E5 E9 FD B7 38 57 59 52 94 11 5F 54 05 
-		                       6F 6C 3F CA 15 19 BD 0C 40 B7 67 10 6E 41 35 A1 
-		                       17 A8 4D 41 BE 48 F9 AB 59 B5 1E 51 09 F6 79 7F 
+		      Transient Key  : FF 4D 05 EF 35 C9 91 08 27 C0 CE 25 C2 A0 9D 39
+		                       23 46 41 E5 E9 FD B7 38 57 59 52 94 11 5F 54 05
+		                       6F 6C 3F CA 15 19 BD 0C 40 B7 67 10 6E 41 35 A1
+		                       17 A8 4D 41 BE 48 F9 AB 59 B5 1E 51 09 F6 79 7F
 
 		      EAPOL HMAC     : 9B F5 0B 0A 75 01 EC F2 C5 CC 64 A6 4E FD 11 16
 		\end{lstlisting}
@@ -638,5 +638,277 @@
 		\usebeamerfont{title}{120 - Courbe elliptique et AES-CCM}
 	\end{beamercolorbox}
 \end{frame}
+
+
+\subsection{Découverte}
+\begin{frame}
+	\begin{block}{Fichiers}
+		\begin{small}
+			\dirtree{%
+				.1 120-courbe-elliptique-et-AES-CCM/.
+				.2 README.txt.
+				.2 alice.priv.pem.
+        .2 bob.pub.pem.
+        .2 ciphertext.bin.
+			}
+		\end{small}
+	\end{block}
+
+	\begin{block}<2->{\textit{indice.txt}}
+		\begin{small}
+      Algorithme utilisé :
+      \begin{itemize}
+        \item Ils choisissent un sel aléatoire de 16 octets (128 bits)
+        \item Ils construisent un "mot de passe de session" en concaténant la coordonnée x (affine) de la clé commune K, et le sel écrit en 32 caractères hexadécimaux
+        \item Ils calculent X = le sha256sum du mot de passe de session.
+        \item Ils chiffrent leur message avec AES-CCM en prenant:
+        \begin{itemize}
+          \item key: les 16 premiers octets de X
+          \item nounce: les 12 octets suivants de X
+          \item associated data: les 4 derniers octets de X
+        \end{itemize}
+      \end{itemize}
+
+		\end{small}
+	\end{block}
+
+
+\end{frame}
+
+\begin{frame}
+	\begin{block}{Fichiers}
+		\begin{small}
+			\dirtree{%
+				.1 120-courbe-elliptique-et-AES-CCM/.
+				.2 README.txt.
+				.2 alice.priv.pem.
+        .2 bob.pub.pem.
+        .2 ciphertext.bin.
+			}
+		\end{small}
+	\end{block}
+
+	\begin{block}{\textit{indice.txt}}
+		\begin{small}
+      Le chiffré est la concaténation des 16 octets de sel, suivis immédiatement du chiffré.
+
+      Vous avez à disposition:
+      \begin{itemize}
+        \item la clé privée d'Alice (\textit{alice.priv.pem})
+        \item la clé publique de Bob (\textit{bob.pub.pem})
+        \item un message (\textit{ciphertext.bin}) envoyé par Bob à Alice
+      \end{itemize}
+
+      Retrouvez le message, et capturez le drapeau!!
+		\end{small}
+	\end{block}
+\end{frame}
+
+\begin{frame}{Procédure}
+	\begin{itemize}
+		\item Analyse des clés
+		\begin{itemize}
+			\item Récupération des clés publiques et privées
+			\item Calcul du secret partagé
+    \end{itemize}
+
+		\item Calcul du hash et dérivation du hash pour obtenir
+		\begin{itemize}
+      \item key: les 16 premiers octets de X
+      \item nounce: les 12 octets suivants de X
+      \item associated data: les 4 derniers octets de X
+		\end{itemize}
+    \item Déchiffrement avec bouncycastle
+    \item Ouverture de l'archive
+	\end{itemize}
+\end{frame}
+
+
+\subsection{Analyse des clés}
+
+\subsubsection{Récupération des clés publiques et privées}
+\begin{frame}[fragile]{Récupération des clés publiques et privées}
+  \begin{block}{Alice}
+    \vspace{-3mm}
+    \begin{lstlisting}[style=Term]
+                        ~$ openssl ec -in alice.priv.pem -text
+                        read EC key
+                        Private-Key: (126 bit)
+                        priv:
+                          31:63:74:79:81:8e:ef:7b:2d:9e:48:4d:c9:ba:a3:
+                          60
+                        pub:
+                          02:b2:d7:af:da:0a:dc:e5:c8:f0:68:a0:f1:0d:1e:
+                          1b:13
+                        ASN1 OID: secp128r2
+                        writing EC key
+                        -----BEGIN EC PRIVATE KEY-----
+                        MDQCAQEEEDFjdHmBju97LZ5ITcm6o2CgBwYFK4EEAB2hFAMSAAKy16/aCtzlyPBo
+                        oPENHhsT
+                        -----END EC PRIVATE KEY-----
+    \end{lstlisting}
+    \vspace{-2mm}
+  \end{block}
+
+  \begin{itemize}
+      \item <2-> Utilisation de courbes elliptiques (cat).
+      \item <3-> Utilisation de la courbe secp128r2.
+	\end{itemize}
+\end{frame}
+
+\begin{frame}[fragile]{Récupération des clés publiques et privées}
+  \begin{block}{Bob}
+    \vspace{-3mm}
+    \begin{lstlisting}[style=Term]
+                        ~$ openssl ec -in bob.pub.pem -pubin -text
+                        read EC key
+                        Public-Key: (126 bit)
+                        pub:
+                          02:8d:40:23:30:e6:71:ab:c8:db:27:e1:68:35:70:
+                          af:1b
+                        ASN1 OID: secp128r2
+                        writing EC key
+                        -----BEGIN PUBLIC KEY-----
+                        MCYwEAYHKoZIzj0CAQYFK4EEAB0DEgACjUAjMOZxq8jbJ+FoNXCvGw==
+                        -----END PUBLIC KEY-----
+    \end{lstlisting}
+    \vspace{-2mm}
+  \end{block}
+
+	\begin{itemize}
+    \item <2->Point Compressé
+  \end{itemize}
+
+\end{frame}
+
+
+
+\begin{frame}[fragile]{Attributs de secp128r2}
+	\begin{center}
+		\includegraphics[width=0.7\linewidth]{120/secp128r2.png}
+	\end{center}
+  \begin{block}{Source}
+    \url{http://www.secg.org/SEC2-Ver-1.0.pdf}
+  \end{block}
+\end{frame}
+
+
+\subsubsection{Calcul du secret partagé}
+\begin{frame}[fragile]{Calcul du secret partagé}
+  \begin{itemize}{}
+    \item Calcul des coordonnées de bob via décompression du point
+    \item <2->Calcul du point partagé
+  \end{itemize}
+  \begin{block}<2->{Commandes sage}
+    \begin{python}
+  sage: p = 2^128-2^97-1
+  sage: K = GF(p)
+  sage: E = EllipticCurve(K,
+  [0xD6031998D1B3BBFEBF59CC9BBFF9AEE1,
+  0x5EEEFCA380D02919DC2C6558BB6D8A5D])
+  sage: B = E(0x8d402330e671abc8db27e1683570af1b,
+  0x58c40537cb9c70c6039996f1975c62b0)
+  sage: a = 0x31637479818eef7b2d9e484dc9baa360
+  sage: a*B
+  (289461379936334899427323674061375811803 :
+   79456150252543717977843886612633216236 : 1)
+    \end{python}
+    \vspace{-2mm}
+  \end{block}
+\end{frame}
+
+\subsection{Calcul du hash et dérivation}
+\begin{frame}[fragile]{Calcul du hash et dérivation}
+  \begin{block}{Script python}
+    \begin{python}
+  f = open("ciphertext.bin", 'rb').read()
+  # On va chercher la cle dont le hash est utilise dans l'AES a
+  # partir du sel present dans le chiffre
+  sel = f[0:16]
+  selhex = sel.hex()
+  key = str(x) + selhex
+  hashhex = hashlib.sha256(str(key).encode()).hexdigest()
+  hash2 = bytes.fromhex(hashhex)
+    \end{python}
+    \vspace{-2mm}
+  \end{block}
+  \begin{block}{}
+    \begin{itemize}
+      \item Calcul du hash
+      \item <2-> Exportation du hash et du chiffré selon l'algorithme
+      \item <3-> Passage à bouncycastle
+    \end{itemize}
+
+  \end{block}
+
+\end{frame}
+
+
+\subsection{Déchiffrement avec bouncycastle}
+\begin{frame}[fragile]{Déchiffrement avec bouncycastle}
+	\begin{center}
+		\includegraphics[width=0.95\linewidth]{120/eclipse.png}
+	\end{center}
+    Réutilisation du code donné dans \textit{indice.txt}.
+
+
+\end{frame}
+
+\subsection{Ouverture de l'archive}
+\begin{frame}[fragile]{Ouverture de l'archive}
+  \begin{block}{Type de fichier}
+    \vspace{-3mm}
+    \begin{lstlisting}[style=Term]
+                        ~$ file output.dat
+                        output.dat: LZMA compressed data, streamed
+    \end{lstlisting}
+    \vspace{-2mm}
+  \end{block}
+  \begin{block}<2->{Désarchivage}
+    \vspace{-3mm}
+    \begin{lstlisting}[style=Term]
+                        ~$ unlzma output.lzma && cat output
+                        Bonjour Alice,
+
+                        Comment vas-tu?
+
+                        Bravo pour avoir retrouvé ce message.
+                        ton flag est le sha1sum de ce message (le fichier .txt, pas le fichier
+                        compressé!)
+
+                        Encore bravo et a bientot!
+                        -- Bob
+    \end{lstlisting}
+    \vspace{-2mm}
+  \end{block}
+  \begin{block}<3->{}
+    (Oui, les accents sont passés à la trappe)
+  \end{block}
+\end{frame}
+
+
+\begin{frame}[fragile]{Flag}
+  \begin{block}{sha1sum}
+    \vspace{-3mm}
+    \begin{lstlisting}[style=Term]
+                        ~$ sha1sum output
+                        12925715a76dbde55edcaacd657b4bd0233f8adf  output
+    \end{lstlisting}
+    \vspace{-2mm}
+  \end{block}
+  \begin{exampleblock}{Solution}<2->
+		Drapeau : \textbf{12925715a76dbde55edcaacd657b4bd0233f8adf}
+	\end{exampleblock}
+
+\end{frame}
+
+\subsection{Recommandations}
+\begin{frame}{Recommandations}
+	\begin{itemize}
+		\item Ne pas rendre sa clé privée accessible à un attaquant.
+    \item<2-> Rendre difficile pour l'attaquant la prise de connaissance de l'algorithme utilisé.
+	\end{itemize}
+\end{frame}
+
 
 \end{document}
